--- a/client/signup.html
+++ b/client/signup.html
@@ -17,14 +17,14 @@
 
       <aside class="app-form">
         <header><h2 class="center">Sign Up For Your Free Trial Account</h2></header>
-          <form id="register" method="POST" action="/signup">
+          <form id="register">
        
             <div class="form-control">
                 <label for="fullname">Please enter your full name.</label>
                 <input id="fullname" type="text" name="fullname" placeholder="first and last name" value="jim foley"/>
             </div>
               <div class="form-control">
-                  <label for="email">Enter a valid email address</label>
+                  <label for="email">Enter an valid email address</label>
                   <input id="email" type="text" name="email" placeholder="email address for the account" value="email@workspace.com"/>
               </div>
 
